TestProgramı Frontend Bitti

--- a/src/app/components/auth/change-password/change-password.component.html
+++ b/src/app/components/auth/change-password/change-password.component.html
@@ -3,11 +3,11 @@
       <div class="login-box" style="margin:auto">
         <div class="card card-outline card-primary">
           <div class="card-header text-center">
-            <a routerLink="/" class="h1"><b>Angular</b>LTE</a>
+            <a routerLink="/" class="h1"><b>{{programNameBold}}</b>{{programNameRegular}}</a>
           </div>
           <div class="card-body">
             <p class="login-box-msg">
-              Yeni şifrenizi aşağıdaki kutulara girerek değiştirebilirsiniz.
+              Mevcut şifrenizi ve yeni şifrenizi aşağıdaki kutulara girerek değiştirebilirsiniz.
             </p>
             <div class="input-group mb-3">
               <input
