--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,8 +1,8 @@
-<body class="hold-transition login-page">
+<body class="hold-transition login-page" style="background-image :url('{{backgroundImage}}');background-repeat:no-repeat;background-size:100% 100%;">
     <div class="login-box">
       <div class="card card-outline card-primary">
         <div class="card-header text-center">
-          <a routerLink="/" class="h1"><b>Angular</b>LTE</a>
+          <a routerLink="/" class="h1"><b>{{programNameBold}}</b>{{programNameRegular}}</a>
         </div>
         <div class="card-body">
           <p class="login-box-msg">Şifrenizimi unuttunuz? Mail adresinizi girerek yeni şifrenizi oluşturabilirsiniz.</p>
