--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="login-box">
       <div class="card card-outline card-primary">
         <div class="card-header text-center">
-          <a class="h1"><b>Angular</b>LTE</a>
+          <a class="h1"><b>{{programNameBold}}</b>{{programNameRegular}}</a>
         </div>
         <div class="card-body">
           <p class="login-box-msg">Giriş yapmak için bilgilerinizi doldurun</p>
